resources/css/kt-framing.css
/* ... */
.info_dashlet_rightrepeat_top_small {
    position: absolute;
    width: 30px;
    height: 50%;
    top: 5px;
    right: 0px;
    background: #DEDEDE url(../graphics/info_rightrepeat.png) top right repeat-y;
    z-index:-1;
    overflow:hidden;
}

.info_dashlet_rightrepeat_bottom {
    position: absolute;
    width: 30px;
    height: 50%;
    bottom: 10px;
    right: 0px;
    background: #DEDEDE url(../graphics/info_rightrepeat.png) bottom right repeat-y;
    z-index:-1;
    overflow:hidden;
}

.info_dashlet_rightrepeat_top {
    min-height: 70px;
}

.info_dashlet_rightrepeat_top_small {
    min-height: 20px;
}

.dashboard_block.rolled-up .info_dashlet_toprepeat
{
    height: 38px;
}

.dashboard_block.rolled-up .info_dashlet_bottomrepeat
{
    height: 20px;
}

.dashboard_block.rolled-up .info_dashlet_rightrepeat_top
{
    display: none;
}

.dashboard_block.rolled-up .info_dashlet_rightrepeat_bottom
{
    display: none;
}

.dashboard_block.rolled-up .info_dashlet_leftrepeat_top
{
    display: none;
}

.dashboard_block.rolled-up .info_dashlet_leftrepeat_bottom
{
    display: none;
}

.dashboard_block.rolled-up .info_dashlet_bottomleft
{
	background: url(../graphics/info_bottomleft_rolledup.png) bottom left no-repeat;
}

.dashboard_block.rolled-up .info_dashlet_bottomright
{
	background: url(../graphics/info_bottomright_rolledup.png) bottom right no-repeat;
}

#copyrightbarBorder {
    margin-top: 40px;
    margin-bottom: 50px;
    border: 1px solid #BBBBBB;
    background-color: #D1D1D1;
}

hr {
    border-width: 1px 0 0 0;
    border-style: solid;
    border-color: #888;
}

#support-block {
    width: 100%;
    height: 500px;
    border: 1px solid #666;
}

/* -------------- extra info for the "views" column on doc ---------------------- */

#document-views {
    position: absolute;
    top: 200px;
    right: 0;
    width: 19em;
    z-index: 2;
}

#document-views .viewlet {
    margin: 0 2em 1.5em 0;
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #ccc;
    padding: 0 0 0.5em;
}

#document-views .viewlet h3 {
    margin: 0;
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #eee;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-left: 0.5em;
    text-align: left;
    color: #333;
    font-size: small;
}

#document-views .downloadbox {
    padding: 0.5em;
    border: 1px transparent;
    margin-bottom: 1em;
}

#document-views .downloadbox ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#document-views .downloadbox ul li {
    padding-left: 25px;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    background-repeat: no-repeat;
    background-position: center left;
}


#document-views .viewlet .actionlist
{
    list-style: none;
    padding: 0; margin: 0; border: 0;
    font-size: small;
}

#document-views .viewlet .actionlist li
{
    display: block;
    padding: 0 0 0 10px;
    margin: 0.5em 0.5em 0.15em 0;
    text-align: left;
    background: transparent url(../graphics/leftbullet.png) center left no-repeat;
    border: 0;
}

#document-views .downloadbox ul li.view_details {
    background-image: url(../graphics/info.png);
}


#document-views .downloadbox ul li.download {
    background-image: url(../graphics/download.png);
}

#document-views .downloadbox ul li.checkout {
    background-image: url(../graphics/checkout.png);
}

#document-views .downloadbox ul li.checkin {
    background-image: url(../graphics/checkin.png);
}

#document-views .downloadbox ul li.cancel_checkout {
    background-image: url(../graphics/cancel_checkout.png);
}


#document-views .downloadbox ul li.edit_metadata {
    background-image: url(../graphics/edit_metadata.png);
}

#content ul {
    list-style-image: url(../graphics/bullet.png);
    padding-left: 15px;
}


/* -------------------------- general collapsable blocks ------------------------ */

.collapsible
{
    margin: 0 0 1.5em 0;
    border-width: 1px 1px 1px 1px;
    border-style: solid;
    border-color: #ccc;
    padding: 0 0 0 0;
}

.collapsible .collapsiblebody {
    padding: 0 0 0.5em 0;
}

.collapsible.expanded
{
    margin: 0 0 1.5em 0;
    border-left: 1px solid white;
    border-top: 1px solid white;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
    padding: 0 0 0.5em;
}

.collapsible h4:hover {
    text-decoration: underline;
}

.collapsible h4
{
    margin: 0;
    border-width: 0 0 1px 0;
    border-style: none;
    border-color: #eee;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-left: 25px;
    background: url(../graphics/plus.gif) 10px 50% no-repeat;
    text-align: left;
    color: #333;
    font-size: small;
}


.collapsible.expanded h4
{
    margin: 0;
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: #eee;
    padding-top: 0.25em;
    padding-bottom: 0.25em;
    padding-left: 25px;
    text-align: left;
    background: url(../graphics/minus.gif) 10px 50% no-repeat;
    color: #333;
    font-size: small;
}

.collapsible .collapsiblebody {
    display: none;
}

.collapsible.expanded .collapsiblebody {
    display: block;
}



/* -------------------------- iframe browse ------------------------ */
.browse-frame {
    width: 100%;
    height: 55em;
    border-width: 0px;
    padding:0;
    margin: 0;
}

.browse_body {
    padding: 0;
}

/* -------------------------- dashboard ------------------------ */

.dashboard_block_icons
{
    position: absolute;
	top: 0px;
	right: 10px;
    text-align: right;
    margin: 0.2em 0em 0 0;
}

.dashboard_block_handle
{
    cursor: pointer;
    margin: 0.2em -0.5em 0.5em 0;
    font-size:small;
}

.dashboard_block.rolled-up .dashboard_block_body
{
    display: none;
}

.ktBlock .dashboard_block_body
{
    z-index:99;
    margin: 8px 0 10px 0;
    background-color:#FFFFFF;
    overflow: auto;
}

.ktError .dashboard_block_body
{
    z-index:99;
    margin: 0;
    background-color: #ffdd80;
    overflow: auto;
}
/* ... */

